# DouZero

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES  evaluate.py  evaluate_belief.py  evaluate_paired.py  generate_eval_data.py  ingest_human_games.py  pretrain_bc.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  train.py  train_belief.py  train_coach.py  train_v2.py  train_v3_h7.py  validate_human_games.py
.docker/: Dockerfile.test  run_release_gate.sh  run_tests.sh
.github/: actionlint.yaml
benchmarks/: bench_bidding_batch.py  bench_factorized.py  bench_gpu_v3.py  bench_legacy.py  bench_legacy_training.py  bench_model_v2.py  bench_search.py  bench_standard_v2.py  bench_training_system.py  bench_v3_h1_model.py  bench_v3_h2_admc.py  freeze_v3_h7_protocol.py  run_v3_h7_topology.py  standard_v2_reference.py  validate_v3_h7_evidence.py
configs/: enhanced.yaml  gpu_v3.yaml  legacy.yaml  legacy_single_gpu_a1.yaml  standard.yaml  standard_v2.yaml  v3_hybrid.yaml
docs/: belief_model.md  checkpoint_compatibility.md  coach_curriculum.md  configuration.md  deployment.md  distillation.md  evaluation_protocol.md  factorized_forward.md  gpu_validation.md  human_data_and_bc.md  human_data_canary.md  migration.md  model_card.md  model_v2.md  multi_objective_training.md  observation_v2.md  p17_evaluation_report.md  packaging.md  policy_league_and_style.md  release_readiness.md  reproducibility.md  rules_and_scoring.md  search.md  standard_v2_single_gpu_implementation_plan.md  strategy_features.md  third_party_review.md  training_system.md  v3_hybrid_contract.md  windows_training.md
douzero/: _version.py
scripts/: validate_gpu_training.sh
tests/: conftest.py  test_baseline_invariants.py  test_bench_model_v2.py  test_benchmark_cuda_contract.py  test_bidding_state_machine.py  test_cards_and_encoding.py  test_checkpoint_loader.py  test_checkpoint_manifest.py  test_config.py  test_deepagent_selection.py  test_dmc_imports_without_gitpython.py  test_env_rollout.py  test_eval_data_format.py  test_factorized_parity.py  test_formal_eval_data.py  test_formal_evaluation_dry_run.py  test_formal_evaluation_workflow.py  test_gpu_v3_benchmark.py  test_gpu_v3_contract.py  test_gpu_v3_distillation.py  test_gpu_v3_models.py  test_leakage_guard.py  test_legacy_profiling.py  test_legacy_training_optimization.py  test_legacy_training_review_fixes.py  test_legal_actions_snapshot.py  test_m1_gpu_workflow.py  test_model_shapes.py  test_model_v2.py  test_move_generation.py  test_observation_legacy_adapter.py  test_observation_v2.py  test_observation_v2_hardening.py  test_p02_round4_fixes.py  test_p06_calibration.py  test_p06_decision_policy.py  test_p06_env_team_targets.py  test_p06_eval_metrics.py  test_p06_labels.py  test_p06_legacy_unchanged.py  (+60 more)
tools/: capture_baseline.py  formal_evaluation_dry_run.py  (+13 more)
(+542 files in other folders)
